--- a/index.html
+++ b/index.html
@@ -1,44 +1,118 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | E-commerce product page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" defer></script>
+
 </head>
 <body>
-
-  Collections
-  Men
-  Women
-  About
-  Contact
-
-  Sneaker Company
-
-  Fall Limited Edition Sneakers
-
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div id="lightbox-container">
+    <div id="lightbox">
+      <svg onclick="closeLightbox()" id="close-lightbox-btn" width="14" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd"/></svg>
+      <div id="lightbox-body">
+        <button onclick="nextImg()" id="next-btn-lightbox"><svg id="next" width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg></button>
+        <button onclick="backImg()" id="previous-btn-lightbox"><svg width="12" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg></button>
+        <img id="img-focus-lightbox" src="images/image-product-1.jpg" alt="Product">
+        <div id="images">
+          <img onclick="changePreviewImg(0)" class="thumbnail-lightbox selected-lightbox" src="images/image-product-1-thumbnail.jpg" alt="Thumbnail1">
+          <img onclick="changePreviewImg(1)" class="thumbnail-lightbox" src="images/image-product-2-thumbnail.jpg" alt="Thumbnail2">
+          <img onclick="changePreviewImg(2)" class="thumbnail-lightbox" src="images/image-product-3-thumbnail.jpg" alt="Thumbnail3">
+          <img onclick="changePreviewImg(3)" class="thumbnail-lightbox" src="images/image-product-4-thumbnail.jpg" alt="Thumbnail4">
+        </div>
+      </div>
+    </div>
   </div>
+  <div id="menu-mobile-container">
+    <div id="menu-mobile">
+      <img id="close-btn" src="images/icon-close.svg" alt="">
+      <nav>
+        <li>Collections</li>
+        <li>Men</li>
+        <li>Women</li>
+        <li>About</li>
+        <li>Contact</li>
+      </nav>
+    </div>
+  </div>
+  <div id="cart-container">
+    <div id="cart-header">
+      <h1>Cart</h1>
+    </div>
+    <p id="empty">Your cart is empty.</p>
+    <div id="cart-body">
+      <div id="item-container">
+        <img id="item-preview-cart" src="images/image-product-1-thumbnail.jpg" alt="">
+        <div id="item-infos">
+          <span id="item-name">Fall Limited Edition Sneakers</span>
+          <span id="default-price">$125.00 x <span id="item-amount"></span> <span id="final-price">$375.00</span></span>
+        </div>
+        <img onclick="deleteItem()" id="delete-btn" src="images/icon-delete.svg" alt="">
+      </div>
+      <button class="btn-checkout">Checkout</button>
+    </div>
+  </div>
+  <header>
+    <div>
+      <img id="menu-btn" src="images/icon-menu.svg" alt="">
+      <h1 id="title">sneakers</h1>
+      <nav>
+        <li>Collections</li>
+        <li>Men</li>
+        <li>Women</li>
+        <li>About</li>
+        <li>Contact</li>
+      </nav>
+    </div>
+    <div>
+      <div id="cart" onclick="toggleCart()">
+        <span id="cart-notification">0</span>
+        <svg id="cart-icon-header" width="22" height="20" xmlns="http://www.w3.org/2000/svg"><path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#69707D" fill-rule="nonzero"/></svg>
+      </div>
+      <img id="avatar" src="images/image-avatar.png" alt="Avatar">
+    </div>
+  </header>
+  <main>
+    <section id="preview-section">
+      <button onclick="nextImg()" id="next-btn-mobile"><img src="images/icon-next.svg" alt=""></button>
+      <button onclick="backImg()" id="previous-btn-mobile"><img src="images/icon-previous.svg" alt=""></button>
+      <img onclick="openLightbox()" id="img-focus" src="images/image-product-1.jpg" alt="Product">
+      <div id="images">
+        <img onclick="changePreviewImg(0)" class="selected thumbnail" src="images/image-product-1-thumbnail.jpg" alt="Thumbnail1">
+        <img onclick="changePreviewImg(1)" class="thumbnail" src="images/image-product-2-thumbnail.jpg" alt="Thumbnail2">
+        <img onclick="changePreviewImg(2)" class="thumbnail" src="images/image-product-3-thumbnail.jpg" alt="Thumbnail3">
+        <img onclick="changePreviewImg(3)" class="thumbnail" src="images/image-product-4-thumbnail.jpg" alt="Thumbnail4">
+      </div>
+    </section>
+    <section id="information-section">
+      <h5 id="company">SNEAKER COMPANY</h5>
+      <h1 id="product-name">Fall Limited Edition Sneakers</h1>
+      <p id="product-info">These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
+      <div id="prices">
+        <div>
+          <span id="current-price">$125.00</span>
+          <span id="rebate">50%</span>
+        </div>
+        <span id="price">$250.00</span>
+      </div>
+      <div id="buy-container">
+        <div id="amount">
+          <svg onclick="reduceAmount()" id="minus" width="12" height="4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path d="M11.357 3.332A.641.641 0 0 0 12 2.69V.643A.641.641 0 0 0 11.357 0H.643A.641.641 0 0 0 0 .643v2.046c0 .357.287.643.643.643h10.714Z" id="a"/></defs><use fill="#FF7E1B" fill-rule="nonzero" xlink:href="#a"/></svg>
+          <span id="amount-value">0</span>
+          <svg onclick="increaseAmount()" id="plus" width="12" height="12" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path d="M12 7.023V4.977a.641.641 0 0 0-.643-.643h-3.69V.643A.641.641 0 0 0 7.022 0H4.977a.641.641 0 0 0-.643.643v3.69H.643A.641.641 0 0 0 0 4.978v2.046c0 .356.287.643.643.643h3.69v3.691c0 .356.288.643.644.643h2.046a.641.641 0 0 0 .643-.643v-3.69h3.691A.641.641 0 0 0 12 7.022Z" id="b"/></defs><use fill="#FF7E1B" fill-rule="nonzero" xlink:href="#b"/></svg>
+        </div>
+        <button onclick="addToCart()" id="add-btn">
+          <svg id="cart-icon-main" width="22" height="20" xmlns="http://www.w3.org/2000/svg"><path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#69707D" fill-rule="nonzero"/></svg>
+          Add to cart
+        </button>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
